fixed problems in the jacoco report aggregation and cleaned up the warnings